deployment.yaml
# This file configures the iap app which serves public web traffic.
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: gke-with-iap-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: web-app
        image: gcr.io/[YOUR-PROJECT-ID]/iap-image:latest
        imagePullPolicy: "Always"
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
          protocol: TCP
