service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iap-service
  #annotations:
  #  cloud.google.com/neg: '{"ingress": true}'
  #  cloud.google.com/backend-config: '{"default": "backendconfig-default"}'
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: host1
    port: 80
    protocol: TCP
    targetPort: 8080
